name:                future-resource
version:             0.2.0.0
synopsis:            realtime resource handling with manual concurrency
description:         Lazy resource loading framework for GUI applications
license:             LGPL-3
license-file:        LICENSE
author:              capsjac
maintainer:          capsjac
-- copyright:           
category:            Control
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Control.Future
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8
  -- hs-source-dirs:      
  default-language:    Haskell2010